[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/return.png" type="Texture" id=1]
[ext_resource path="res://Assets/restart.png" type="Texture" id=2]
[ext_resource path="res://Assets/Line 01.png" type="Texture" id=3]
[ext_resource path="res://Assets/black_bg.png" type="Texture" id=4]
[ext_resource path="res://Assets/menu.png" type="Texture" id=5]
[ext_resource path="res://Menu.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/pause.gd" type="Script" id=7]

[node name="Pause" type="Node2D"]
script = ExtResource( 7 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 151, 320.1 )
scale = Vector2( 0.836957, 0.791832 )
texture = ExtResource( 4 )

[node name="line1" type="Sprite" parent="."]
position = Vector2( 0, 100 )
rotation = 1.5708
scale = Vector2( 0.7, 0.5 )
texture = ExtResource( 3 )

[node name="line2" type="Sprite" parent="."]
position = Vector2( 302, 100 )
rotation = 1.5708
scale = Vector2( 0.7, 0.5 )
texture = ExtResource( 3 )

[node name="Head" type="Label" parent="."]
margin_left = 57.0
margin_top = 56.0
margin_right = 257.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 6 )
text = "HIT THE 
GOAL"
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 55.0
margin_top = 276.0
margin_right = 340.0
margin_bottom = 712.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/separation = -30

[node name="restart_btn" type="TextureButton" parent="Buttons"]
margin_right = 285.0
margin_bottom = 104.0
texture_normal = ExtResource( 2 )

[node name="return_btn" type="TextureButton" parent="Buttons"]
margin_top = 74.0
margin_right = 285.0
margin_bottom = 178.0
texture_normal = ExtResource( 1 )

[node name="menu_btn" type="TextureButton" parent="Buttons"]
margin_top = 148.0
margin_right = 285.0
margin_bottom = 252.0
texture_normal = ExtResource( 5 )

[connection signal="button_down" from="Buttons/restart_btn" to="." method="_on_restart_btn_button_down"]
[connection signal="pressed" from="Buttons/restart_btn" to="." method="_on_restart_btn_pressed"]
[connection signal="button_down" from="Buttons/return_btn" to="." method="_on_return_btn_button_down"]
[connection signal="button_up" from="Buttons/return_btn" to="." method="_on_return_btn_button_up"]
[connection signal="button_down" from="Buttons/menu_btn" to="." method="_on_menu_btn_button_down"]
[connection signal="pressed" from="Buttons/menu_btn" to="." method="_on_menu_btn_pressed"]
